objects/LAO_TimeSnapshots__c.object
<CustomObject>
    <fields>
        <fullName>Change_Made_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Made By</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 3) AND 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Laser</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Admin</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>LAO_TimeSnapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle_End_Time__c</fullName>
        <label>Cycle/End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cycle_Start_Time__c</fullName>
        <label>Cycle Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_Label__c</fullName>
        <label>Cycle Time Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Time__c</fullName>
        <label>Cycle Time</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTime_of_Change__c</fullName>
        <label>Date/Time of Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Changed__c</fullName>
        <label>Field Changed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAO__c</fullName>
        <label>LAO</label>
        <referenceTo>Laser_Artwork_Order__c</referenceTo>
        <relationshipLabel>LAO TimeSnapshots</relationshipLabel>
        <relationshipName>LAO_TimeSnapshots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LAO TimeSnapshots</label>
    <nameField>
        <displayFormat>LTS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAO TimeSnapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>